--- a/Navigation.ipynb
+++ b/Navigation.ipynb
@@ -8,46 +8,41 @@
     "\n",
     "---\n",
     "\n",
-    "In this notebook, you will learn how to use the Unity ML-Agents environment for the first project of the [Deep Reinforcement Learning Nanodegree](https://www.udacity.com/course/deep-reinforcement-learning-nanodegree--nd893).\n",
+    "You are welcome to use this coding environment to train your agent for the project.  Follow the instructions below to get started!\n",
     "\n",
     "### 1. Start the Environment\n",
     "\n",
-    "We begin by importing some necessary packages.  If the code cell below returns an error, please revisit the project instructions to double-check that you have installed [Unity ML-Agents](https://github.com/Unity-Technologies/ml-agents/blob/master/docs/Installation.md) and [NumPy](http://www.numpy.org/)."
+    "Run the next code cell to install a few packages.  This line will take a few minutes to run!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mtensorflow 1.7.1 has requirement numpy>=1.13.3, but you'll have numpy 1.12.1 which is incompatible.\u001b[0m\r\n",
+      "\u001b[31mipython 6.5.0 has requirement prompt-toolkit<2.0.0,>=1.0.15, but you'll have prompt-toolkit 3.0.6 which is incompatible.\u001b[0m\r\n"
+     ]
+    }
+   ],
    "source": [
-    "from unityagents import UnityEnvironment\n",
-    "import numpy as np"
+    "!pip -q install ./python"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we will start the environment!  **_Before running the code cell below_**, change the `file_name` parameter to match the location of the Unity environment that you downloaded.\n",
-    "\n",
-    "- **Mac**: `\"path/to/Banana.app\"`\n",
-    "- **Windows** (x86): `\"path/to/Banana_Windows_x86/Banana.exe\"`\n",
-    "- **Windows** (x86_64): `\"path/to/Banana_Windows_x86_64/Banana.exe\"`\n",
-    "- **Linux** (x86): `\"path/to/Banana_Linux/Banana.x86\"`\n",
-    "- **Linux** (x86_64): `\"path/to/Banana_Linux/Banana.x86_64\"`\n",
-    "- **Linux** (x86, headless): `\"path/to/Banana_Linux_NoVis/Banana.x86\"`\n",
-    "- **Linux** (x86_64, headless): `\"path/to/Banana_Linux_NoVis/Banana.x86_64\"`\n",
-    "\n",
-    "For instance, if you are using a Mac, then you downloaded `Banana.app`.  If this file is in the same folder as the notebook, then the line below should appear as follows:\n",
-    "```\n",
-    "env = UnityEnvironment(file_name=\"Banana.app\")\n",
-    "```"
+    "The environment is already saved in the Workspace and can be accessed at the file path provided below.  Please run the next code cell without making any changes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +69,11 @@
     }
    ],
    "source": [
-    "env = UnityEnvironment(file_name=\"C:/Users/Jose Luis/Desktop/AIRBUS - AI  Nanodegree/41.Project - Navigation/1 Udacity help/deep-reinforcement-learning-master/p1_navigation/Banana_Windows_x86_64/Banana.exe\")"
+    "from unityagents import UnityEnvironment\n",
+    "import numpy as np\n",
+    "\n",
+    "# please do not modify the line below\n",
+    "env = UnityEnvironment(file_name=\"/data/Banana_Linux_NoVis/Banana.x86_64\")"
    ]
   },
   {
@@ -86,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,51 +95,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BananaBrain\n",
-      "Unity brain name: BananaBrain\n",
-      "        Number of Visual Observations (per agent): 0\n",
-      "        Vector Observation space type: continuous\n",
-      "        Vector Observation space size (per agent): 37\n",
-      "        Number of stacked Vector Observation: 1\n",
-      "        Vector Action space type: discrete\n",
-      "        Vector Action space size (per agent): 4\n",
-      "        Vector Action descriptions: , , , \n"
-     ]
-    }
-   ],
-   "source": [
-    "print(brain_name)\n",
-    "print(brain)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 2. Examine the State and Action Spaces\n",
-    "\n",
-    "The simulation contains a single agent that navigates a large environment.  At each time step, it has four actions at its disposal:\n",
-    "- `0` - walk forward \n",
-    "- `1` - walk backward\n",
-    "- `2` - turn left\n",
-    "- `3` - turn right\n",
-    "\n",
-    "The state space has `37` dimensions and contains the agent's velocity, along with ray-based perception of objects around agent's forward direction.  A reward of `+1` is provided for collecting a yellow banana, and a reward of `-1` is provided for collecting a blue banana. \n",
     "\n",
     "Run the code cell below to print some information about the environment."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -149,13 +114,12 @@
      "text": [
       "Number of agents: 1\n",
       "Number of actions: 4\n",
-      "States look like: [1.         0.         0.         0.         0.84408134 0.\n",
-      " 0.         1.         0.         0.0748472  0.         1.\n",
-      " 0.         0.         0.25755    1.         0.         0.\n",
-      " 0.         0.74177343 0.         1.         0.         0.\n",
-      " 0.25854847 0.         0.         1.         0.         0.09355672\n",
-      " 0.         1.         0.         0.         0.31969345 0.\n",
-      " 0.        ]\n",
+      "States look like: [ 1.          0.          0.          0.          0.84408134  0.          0.\n",
+      "  1.          0.          0.0748472   0.          1.          0.          0.\n",
+      "  0.25755     1.          0.          0.          0.          0.74177343\n",
+      "  0.          1.          0.          0.          0.25854847  0.          0.\n",
+      "  1.          0.          0.09355672  0.          1.          0.          0.\n",
+      "  0.31969345  0.          0.        ]\n",
       "States have length: 37\n"
      ]
     }
@@ -186,26 +150,24 @@
     "\n",
     "In the next code cell, you will learn how to use the Python API to control the agent and receive feedback from the environment.\n",
     "\n",
-    "Once this cell is executed, you will watch the agent's performance, if it selects an action (uniformly) at random with each time step.  A window should pop up that allows you to observe the agent, as it moves through the environment.  \n",
-    "\n",
-    "Of course, as part of the project, you'll have to change the code so that the agent is able to use its experience to gradually choose better actions when interacting with the environment!"
+    "Note that **in this coding environment, you will not be able to watch the agent while it is training**, and you should set `train_mode=True` to restart the environment."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score: 0.0\n"
+      "Score: 1.0\n"
      ]
     }
    ],
    "source": [
-    "env_info = env.reset(train_mode=False)[brain_name] # reset the environment\n",
+    "env_info = env.reset(train_mode=True)[brain_name] # reset the environment\n",
     "state = env_info.vector_observations[0]            # get the current state\n",
     "score = 0                                          # initialize the score\n",
     "while True:\n",
@@ -226,28 +188,205 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When finished, you can close the environment."
+    "### 4. It's Your Turn!\n",
+    "\n",
+    "Now it's your turn to train your own agent to solve the environment!  A few **important notes**:\n",
+    "- When training the environment, set `train_mode=True`, so that the line for resetting the environment looks like the following:\n",
+    "```python\n",
+    "env_info = env.reset(train_mode=True)[brain_name]\n",
+    "```\n",
+    "- To structure your work, you're welcome to work directly in this Jupyter notebook, or you might like to start over with a new file!  You can see the list of files in the workspace by clicking on **_Jupyter_** in the top left corner of the notebook.\n",
+    "- In this coding environment, you will not be able to watch the agent while it is training.  However, **_after training the agent_**, you can download the saved model weights to watch the agent on your own machine! "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode 100\tAverage Score: 0.19\n",
+      "Episode 200\tAverage Score: 1.38\n",
+      "Episode 300\tAverage Score: 5.51\n",
+      "Episode 400\tAverage Score: 8.90\n",
+      "Episode 500\tAverage Score: 11.13\n",
+      "Episode 600\tAverage Score: 14.67\n",
+      "Episode 637\tAverage Score: 15.02\n",
+      "Environment solved in 537 episodes!\tAverage Score: 15.02\n",
+      "Episode 700\tAverage Score: 15.54\n",
+      "Episode 800\tAverage Score: 15.26\n",
+      "Episode 900\tAverage Score: 17.20\n",
+      "Episode 1000\tAverage Score: 16.41\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7fbabc564b38>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "env.close()"
+    "from dqn_agent import Agent\n",
+    "from collections import deque\n",
+    "import torch\n",
+    "#import torch.nn.functional as F\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "agent = None\n",
+    "state_size, action_size = len(env_info.vector_observations[0]), brain.vector_action_space_size\n",
+    "\n",
+    "def dqn(n_episodes=1000, max_t=500, eps_start=1.0, eps_end=0.01, eps_decay=0.995, \\\n",
+    "    Double_DQN = True, Priority_Replay = True, Duel_DQN = True, Priority_Replay_Paras = [0.5, 0.5, 0.5]):\n",
+    "    global agent\n",
+    "    \"\"\"Deep Q-Learning.\n",
+    "    \n",
+    "    Params\n",
+    "    ======\n",
+    "        n_episodes (int): maximum number of training episodes\n",
+    "        max_t (int): maximum number of timesteps per episode\n",
+    "        eps_start (float): starting value of epsilon, for epsilon-greedy action selection\n",
+    "        eps_end (float): minimum value of epsilon\n",
+    "        eps_decay (float): multiplicative factor (per episode) for decreasing epsilon\n",
+    "        Double_DQN (bool): whether to implement Double_DQN modification\n",
+    "        Priority_Replay (bool): whether to implement Priority_Replay modification\n",
+    "        Duel_DQN (bool): whether to implement Duel_DQN modification\n",
+    "        Priority_Replay_Paras (list of e,a,b floats):\n",
+    "        e adds to all priorities, which are raised to power of a, while b is used to de-bias the q-updates\n",
+    "    \"\"\"\n",
+    "    agent = Agent(state_size, action_size, seed=0, Double_DQN=Double_DQN, Priority_Replay_Paras=Priority_Replay_Paras)\n",
+    "\n",
+    "    scores = []                        # list containing scores from each episode\n",
+    "    saved = False\n",
+    "    scores_window = deque(maxlen=100)  # last 100 scores\n",
+    "    eps = eps_start                    # initialize epsilon\n",
+    "    for i_episode in range(1, n_episodes+1):\n",
+    "\n",
+    "        # reset enviroment\n",
+    "        env_info = env.reset(train_mode=True)[brain_name] # reset the environment\n",
+    "        state = env_info.vector_observations[0]\n",
+    "        \n",
+    "        # update beta towards 1\n",
+    "        agent.update_beta((i_episode-1)/(n_episodes-1))\n",
+    "\n",
+    "        score = 0\n",
+    "        for t in range(max_t):\n",
+    "            action = agent.act(state, eps)\n",
+    "            #next_state, reward, done = env.step(action)\n",
+    "            #print(action)\n",
+    "            env_info = env.step(int(action))[brain_name]\n",
+    "            next_state, reward, done = env_info.vector_observations[0]  , env_info.rewards[0], env_info.local_done[0]\n",
+    "\n",
+    "            agent.step(state, action, reward, next_state, done)\n",
+    "            state = next_state\n",
+    "            score += reward\n",
+    "            if done:\n",
+    "                break \n",
+    "        scores_window.append(score)       # save most recent score\n",
+    "        scores.append(score)              # save most recent score\n",
+    "        eps = max(eps_end, eps_decay*eps) # decrease epsilon\n",
+    "        print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_window)), end=\"\")\n",
+    "        if i_episode % 100 == 0:\n",
+    "            print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_window)))\n",
+    "\n",
+    "#        if np.mean(scores_window)>=20.0:\n",
+    "        if np.mean(scores_window)>=15.0:\n",
+    "            if not saved:\n",
+    "                print('\\nEnvironment solved in {:d} episodes!\\tAverage Score: {:.2f}'.format(i_episode-100, np.mean(scores_window)))\n",
+    "                saved = True\n",
+    "            torch.save(agent.qnetwork_local.state_dict(), 'checkpoint.pth')            \n",
+    "    if not saved:\n",
+    "        torch.save(agent.qnetwork_local.state_dict(), 'checkpoint.pth')\n",
+    "    return scores\n",
+    "\n",
+    "scores = dqn()\n",
+    "\n",
+    "# plot the scores\n",
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(111)\n",
+    "plt.plot(np.arange(len(scores)), scores)\n",
+    "plt.ylabel('Score')\n",
+    "plt.xlabel('Episode #')\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. It's Your Turn!\n",
+    "### 5. Watch a Smart Agent!\n",
+    "In the next code cell, you will load the trained weights from file to watch a smart agent!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run this cell if you already have checkpoint\n",
     "\n",
-    "Now it's your turn to train your own agent to solve the environment!  When training the environment, set `train_mode=True`, so that the line for resetting the environment looks like the following:\n",
-    "```python\n",
-    "env_info = env.reset(train_mode=True)[brain_name]\n",
-    "```"
+    "from dqn_agent import Agent\n",
+    "from collections import deque\n",
+    "import torch\n",
+    "#import torch.nn.functional as F\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "agent = None\n",
+    "state_size, action_size = len(env_info.vector_observations[0]), brain.vector_action_space_size\n",
+    "\n",
+    "# n_episodes=1000\n",
+    "# max_t=500\n",
+    "# eps_start=1.0\n",
+    "# eps_end=0.01\n",
+    "# eps_decay=0.995\n",
+    "Double_DQN = True \n",
+    "# Priority_Replay = True\n",
+    "# Duel_DQN = True \n",
+    "Priority_Replay_Paras = [0.5, 0.5, 0.5]\n",
+    "\n",
+    "agent = Agent(state_size, action_size, seed=0, Double_DQN=Double_DQN, Priority_Replay_Paras=Priority_Replay_Paras)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load the weights from file\n",
+    "agent.qnetwork_local.load_state_dict(torch.load('checkpoint.pth'))\n",
+    "\n",
+    "for i in range(5):\n",
+    "    env_info = env.reset(train_mode=False)[brain_name] # reset the environment\n",
+    "    state = env_info.vector_observations[0]\n",
+    "    for j in range(500):\n",
+    "        action = agent.act(state)\n",
+    "        env_info = env.step(int(action))[brain_name]\n",
+    "        state, reward, done = env_info.vector_observations[0]  , env_info.rewards[0], env_info.local_done[0]\n",
+    "        if done: break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When finished, you can close the environment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env.close()"
    ]
   },
   {
@@ -260,9 +399,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "drlnd",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "drlnd"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -274,7 +413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
