--- a/Navigation.ipynb
+++ b/Navigation.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
      "output_type": "stream",
      "text": [
       "\u001b[31mtensorflow 1.7.1 has requirement numpy>=1.13.3, but you'll have numpy 1.12.1 which is incompatible.\u001b[0m\r\n",
-      "\u001b[31mipython 6.5.0 has requirement prompt-toolkit<2.0.0,>=1.0.15, but you'll have prompt-toolkit 3.0.6 which is incompatible.\u001b[0m\r\n"
+      "\u001b[31mipython 6.5.0 has requirement prompt-toolkit<2.0.0,>=1.0.15, but you'll have prompt-toolkit 3.0.7 which is incompatible.\u001b[0m\r\n"
      ]
     }
    ],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -208,24 +208,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode 100\tAverage Score: 0.19\n",
-      "Episode 200\tAverage Score: 1.38\n",
-      "Episode 300\tAverage Score: 5.51\n",
-      "Episode 400\tAverage Score: 8.90\n",
-      "Episode 500\tAverage Score: 11.13\n",
-      "Episode 600\tAverage Score: 14.67\n",
-      "Episode 637\tAverage Score: 15.02\n",
-      "Environment solved in 537 episodes!\tAverage Score: 15.02\n",
-      "Episode 700\tAverage Score: 15.54\n",
-      "Episode 800\tAverage Score: 15.26\n",
-      "Episode 900\tAverage Score: 17.20\n",
-      "Episode 1000\tAverage Score: 16.41\n"
+      "Episode 100\tAverage Score: 0.42\n",
+      "Episode 200\tAverage Score: 3.20\n",
+      "Episode 300\tAverage Score: 7.78\n",
+      "Episode 400\tAverage Score: 10.28\n",
+      "Episode 500\tAverage Score: 13.44\n",
+      "Episode 600\tAverage Score: 14.64\n",
+      "Episode 662\tAverage Score: 15.01\n",
+      "Environment solved in 562 episodes!\tAverage Score: 15.01\n",
+      "Episode 700\tAverage Score: 14.81\n",
+      "Episode 800\tAverage Score: 15.83\n",
+      "Episode 900\tAverage Score: 15.95\n",
+      "Episode 1000\tAverage Score: 16.36\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7fbabc564b38>"
+       "<matplotlib.figure.Figure at 0x7f6d70da6710>"
       ]
      },
      "metadata": {},
@@ -313,7 +313,9 @@
     "plt.plot(np.arange(len(scores)), scores)\n",
     "plt.ylabel('Score')\n",
     "plt.xlabel('Episode #')\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "fig.savefig('scores.png')"
    ]
   },
   {
@@ -382,11 +384,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "env.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "np.savetxt(\"scores.csv\", scores, delimiter=\",\", fmt='%s')"
    ]
   },
   {
