--- a/Navigation.ipynb
+++ b/Navigation.ipynb
@@ -315,7 +315,8 @@
     "plt.xlabel('Episode #')\n",
     "plt.show()\n",
     "\n",
-    "fig.savefig('scores.png')"
+    "fig.savefig('scores.png')\n",
+    "# np.savetxt(\"scores.csv\", scores, delimiter=\",\", fmt='%s')"
    ]
   },
   {
@@ -343,14 +344,14 @@
     "agent = None\n",
     "state_size, action_size = len(env_info.vector_observations[0]), brain.vector_action_space_size\n",
     "\n",
-    "# n_episodes=1000\n",
-    "# max_t=500\n",
-    "# eps_start=1.0\n",
-    "# eps_end=0.01\n",
-    "# eps_decay=0.995\n",
+    "n_episodes=1000\n",
+    "max_t=500\n",
+    "eps_start=1.0\n",
+    "eps_end=0.01\n",
+    "eps_decay=0.995\n",
     "Double_DQN = True \n",
-    "# Priority_Replay = True\n",
-    "# Duel_DQN = True \n",
+    "Priority_Replay = True\n",
+    "Duel_DQN = True \n",
     "Priority_Replay_Paras = [0.5, 0.5, 0.5]\n",
     "\n",
     "agent = Agent(state_size, action_size, seed=0, Double_DQN=Double_DQN, Priority_Replay_Paras=Priority_Replay_Paras)"
@@ -390,23 +391,6 @@
    "source": [
     "env.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "np.savetxt(\"scores.csv\", scores, delimiter=\",\", fmt='%s')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
